@@ -2,6 +2,7 @@
 
 	* soundconverter.py: hum?!?!? File dropping was *again* broken, maybe
 	  it's my evil twin which edit the code :)
+	* soundconverter.py: added a timeout when reading tags.
 
 2006-01-15  Gautier Portet <kassoulet gmail com>
 
